Improve the tutorial

--- a/topics/translatomics/slides/introduction.html
+++ b/topics/translatomics/slides/introduction.html
@@ -5,7 +5,8 @@ logo: "GTN"
 title: Introduction to Translatomics
 type: introduction
 contributors:
-- ldyang14 
+- ldyang14
+- hhuili
 ---
 
 # What is the Ribo-seq?
@@ -30,7 +31,7 @@ contributors:
 - The second part of the central dogma
 - Research object of the translatomics
 
-.footnote[[Credit: Kelvinsong](https://en.wikipedia.org/wiki/Translation_(biology)#/media/File:Protein_synthesis.svg)]
+.footnote[[Credit: Kelvinsong]('https://en.wikipedia.org/wiki/Translation_(biology)#/media/File:Protein_synthesis.svg')]
 
 ---
 
@@ -62,9 +63,9 @@ contributors:
 
 ![The research trend about ribosome profiling](../images/riboseq_trends.png)
 
-- The increasing number of articles related to ribosome profiling 
+- The increasing number of articles related to ribosome profiling
 
-.footnote[[Credit: Scopus](https://www.scopus.com/term/analyzer.uri?sid=a6c40a6e8628754d04eeb2f03fcc3ddf&origin=resultslist&src=s&s=TITLE-ABS-KEY%28%22ribosome+profiling%22%29&sort=plf-f&sdt=b&sot=b&sl=35&count=610&analyzeResults=Analyze+results&txGid=fedb8a54c0fcd2d6c5fb2b62d6c56850)]
+.footnote[[Credit: Scopus](https://www.scopus.com/)]
 
 ---
 
@@ -84,13 +85,13 @@ contributors:
 
 1. Identifying the translational start site
 
-2. estimating the rate of protein synthesis
+2. Estimating the rate of protein synthesis
 
 3. Identifying open reading frames
 
 4. Calculating translational efficiency
 
-5. examining frameshifting, stop-codon, read-through, initiation at non-AUG codons
+5. Examining frameshifting, stop-codon, read-through, initiation at non-AUG codons
 
 ---
 
@@ -100,9 +101,8 @@ contributors:
 
 ### Workflow to analyse Ribo-seq data
 
-![Workflow of Ribo-seq data](../images/workflow_riboseq_data.jpg)
+![Workflow of Ribo-seq data](../images/riboseq-workflow.png)
 
 - Analysis process for Ribo-seq data
 
-.footnote[[Credit: Stephen Turnerd](https://twitter.com/strnr/status/1108048186273419264)]
-
+.footnote[[Credit: hhuili](https://github.com/hhuili/Translatome-workbench/blob/master/figure/translatome_pipeline.pdf)]
